[package]
name = "fast-mask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = "4.4.18"
image = "0.24.8"
indicatif = { version = "0.17.7", features = ["rayon"] }
ndarray = "0.15.6"
ndrustfft = "0.4.2"
num-complex = "0.4.4"
rand = "0.8.5"
rayon = "1.8.0"
rustfft = "6.1.0"
strength_reduce = "0.2.4"
walkdir = "2.4.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
